--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,10 @@
 @import "mixins";
 @import "variables";
+@import "normalize";
+@import "base";
 @import "blocks/page-header";
 @import "blocks/page-main";
+@import "blocks/page-catalog";
+@import "blocks/catalog-element";
+@import "blocks/man-process";
+@import "blocks/footer";
