Style hero & about us

--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -1,5 +1,22 @@
-.page-main {
-  background-color: $fancy-color;
+.page-main__hero {
+  background-image: url("../../img/hero-mobile@1x.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 373px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 39px;
+}
 
-  @include heading();
+.page-main__hero-text {
+  font-size: 27px;
+  line-height: 30px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.page-main__catalog-list {
+  list-style: none;
 }
