Style featured product

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -3,6 +3,7 @@ $background-grey1: #f1f1f1;
 $border-grey1: #ececec;
 $greyish-brown: #444444;
 $black-three: #000000;
+$seafoam-blue: #63d1bb;
 
 $filter-seafoam-blue: invert(88%) sepia(15%) saturate(1247%) hue-rotate(106deg)
   brightness(86%) contrast(89%);
