Add border-box reset

--- a/source/sass/base.scss
+++ b/source/sass/base.scss
@@ -15,6 +15,16 @@ body {
   font-family: "Open Sans", "Arial", sans-serif;
 }
 
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 .visually-hidden {
   position: absolute;
   overflow: hidden;
