Add links for for catalog pages

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -4,6 +4,9 @@ $border-grey1: #ececec;
 $greyish-brown: #444444;
 $black-three: #000000;
 $seafoam-blue: #63d1bb;
+$aqua-marine: #56c3b2;
+$pudgy-aquamarine: #149080;
+$white1: #ffffff;
 
 $filter-seafoam-blue: invert(88%) sepia(15%) saturate(1247%) hue-rotate(106deg)
   brightness(86%) contrast(89%);
