--- a/source/sass/base.scss
+++ b/source/sass/base.scss
@@ -37,7 +37,7 @@ html {
 }
 
 .button {
-  width: 192px;
+  width: 100%;
   height: 52px;
   padding: 15px 24px 16px;
   background-color: white;
@@ -46,4 +46,5 @@ html {
   font-size: 17px;
   text-transform: uppercase;
   font-weight: bold;
+  white-space: nowrap;
 }
