Change button to link because of review comments
https://github.com/htmlacademy-adaptive/161913-mishka-16/pull/2#issuecomment-482623146

--- a/source/sass/base.scss
+++ b/source/sass/base.scss
@@ -47,4 +47,6 @@ html {
   text-transform: uppercase;
   font-weight: bold;
   white-space: nowrap;
+  display: inline-block;
+  text-align: center;
 }
